# mime2ext

./: .gitattributes  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.py  build.rs  clippy.toml
.github/workflows/: ci.yaml
src/: lib.rs  lookup  raw_data
