[package]
name = "mime2ext"
version = "0.1.1"
authors = ["Jan Verbeek <jan.verbeek@posteo.nl>"]
description = "Given a mimetype, suggest a file extension"
keywords = ["mime", "extension", "filesystem", "web", "no_std"]
categories = ["filesystem", "web-programming"]
repository = "https://github.com/blyxxyz/mime2ext"
documentation = "https://docs.rs/mime2ext"
license = "MIT"
readme = "README.md"
edition = "2018"
exclude = ["mime-db/**", "!mime-db/db.json", "!mime-db/LICENSE"]

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
